[package]
name = "vls-frontend"
version = "0.12.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A library for implementing VLS frontend functions."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.66.0"

[features]
default = ["debug"]
test_utils = ["vls-core/test_utils"]
debug = []
log_pretty_print = ["vls-core/log_pretty_print"]

[lib]
name = "vls_frontend"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
log = { version="0.4.14", features = [ "std" ] }
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
url = "2.3"
vls-core = { path = "../vls-core", version = "0.12.0", features = ["txoo-source"] }
lightning-storage-server = { path = "../lightning-storage-server", version = "0.3.0", default-features = false }
triggered = "0.1"

[dependencies.txoo-bitcoind-client]
version = "0.7.1"
#git = "https://gitlab.com/lightning-signer/txoo"
#rev = "d49b25283a5f1db675db20a19b313e5ca7456410"
#branch = "main"
#path = "../../txoo/bitcoind-client"

[dev-dependencies]
test-log = "0.2.8"
env_logger = "0.9"

[[example]]
name = "lss_example"
