[package]
name = "vls-persist"
version = "0.1.0"
rust-version = "1.60.0"
edition = "2018"

[lib]
name = "vls_persist"
path = "src/lib.rs"

[features]
default = ["std", "memo"]
std = ["lightning-signer-core/std", "log/std"]
no-std = ["lightning-signer-core/no-std"]
test_utils = ["lightning-signer-core/test_utils"]
kv-json = ["kv"]
memo = ["serde_json"]

[dependencies]
lightning-signer-core = { path = "../lightning-signer-core", default-features = false, features = ["serde"]}
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_with = { version = "2.0", default-features = false, features = ["hex", "macros"] }
hex = { version = "0.4", default-features = false }
kv = { version = "0.23", features = ["json-value"], optional = true }
log = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
tempfile = "3.2"
test-log = "0.2"
env_logger = "0.9"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "persist_test"
path = "src/persist_test_main.rs"
required-features = ["kv-json", "test_utils"]
