[package]
name = "vls-persist"
license = "Apache-2.0"
version = "0.9.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2018"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[lib]
name = "vls_persist"
path = "src/lib.rs"

[features]
default = ["std", "memo", "test_utils"]
std = ["vls-core/std", "log/std"]
no-std = ["vls-core/no-std"]
test_utils = ["vls-core/test_utils"]
kv-json = ["kv"]
memo = ["serde_json"]
# this is a hack to disable a test that causes an illegal instruction under kcov
kcov = []

[dependencies]
vls-core = { path = "../vls-core", version = "0.9.0", default-features = false }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_with = { version = "2.0", default-features = false, features = ["hex", "macros"] }
hex = { version = "0.4", default-features = false }
kv = { version = "0.23", features = ["json-value"], optional = true }
log = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
tempfile = "3.2"
test-log = "0.2"
env_logger = "0.9"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "persist_test"
path = "src/persist_test_main.rs"
required-features = ["kv-json", "test_utils"]

[[bin]]
name = "gen_sample_data"
path = "src/gen_sample_data_main.rs"
required-features = ["kv-json"]

[[bin]]
name = "dump_sample_data"
path = "src/dump_sample_data_main.rs"
required-features = ["kv-json"]
