[package]
name = "vls-persist"
license = "Apache-2.0"
version = "0.12.0-rc.3"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[lib]
name = "vls_persist"
path = "src/lib.rs"

[features]
default = ["std", "kvv", "test_utils"]
std = ["vls-core/std", "log/std", "tracing/std"]
no-std = ["vls-core/no-std"]
test_utils = ["vls-core/test_utils", "tempfile"]
redb-kvv = ["redb", "kvv", "uuid"]
kvv = ["serde_json"]

[dependencies]
vls-core = { path = "../vls-core", version = "0.12.0-rc.3", default-features = false }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_with = { version = "3.6", default-features = false, features = ["hex", "macros"] }
hex = { version = "0.4", default-features = false }
log = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
redb = { version = "1.3", optional = true }
tempfile = { version = "3.2", optional = true }
uuid = { version = "1.4", optional = true, features = ["v4"] }
tracing = { version = "0.1.40", features = ["attributes", "log"], default-features = false }

[dev-dependencies]
tempfile = "3.2"
test-log = "0.2"
env_logger = "0.9"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
redb = { version = "1.3" }
uuid = { version = "1.4", features = ["v4"] }

[[bin]]
name = "persist_test"
path = "src/persist_test_main.rs"
required-features = ["redb-kvv", "test_utils"]

[[bin]]
name = "gen_sample_data"
path = "src/gen_sample_data_main.rs"
required-features = ["redb-kvv"]

[[bin]]
name = "dump_sample_data"
path = "src/dump_sample_data_main.rs"
required-features = ["redb-kvv"]
