[package]
name = "vls-protocol-client"
version = "0.1.0"
edition = "2018"

[features]
null = ["vls-protocol-signer"]
grpc = []
test_utils = ["vls-core/test_utils"]

[dependencies]
vls-protocol-signer = { path = "../vls-protocol-signer", optional = true }
vls-protocol = { path = "../vls-protocol" }
vls-core = { path = "../vls-core" }
bit-vec = "0.6"
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
delegate = "0.6.2"
