[package]
name = "vls-protocol-client"
license = "Apache-2.0"
version = "0.9.1"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2018"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[features]
grpc = []
test_utils = ["vls-core/test_utils"]

[dependencies]
vls-protocol-signer = { path = "../vls-protocol-signer", version = "0.9.1" }
vls-protocol = { path = "../vls-protocol", version = "0.9.1" }
vls-core = { path = "../vls-core", version = "0.9.1" }
bit-vec = "0.6"
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
delegate = "0.6.2"
