[package]
name = "vls-protocol-client"
license = "Apache-2.0"
version = "0.14.0-rc.1"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[features]
grpc = []
test_utils = ["vls-core/test_utils"]
developer = ["vls-protocol/developer"]

[dependencies]
vls-protocol-signer = { path = "../vls-protocol-signer", version = "0.14.0-rc.1" }
vls-protocol = { path = "../vls-protocol", version = "0.14.0-rc.1" }
vls-core = { path = "../vls-core", version = "0.14.0-rc.1" }
log = "0.4"
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
delegate = "0.12.0"
