[package]
name = "vls-protocol-signer"
license = "Apache-2.0"
version = "0.9.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2018"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[features]
default = ["std"]
no-std = ["vls-core/no-std"]
std = ["vls-protocol/std", "vls-core/std"]
secp-lowmemory = ["vls-core/secp-lowmemory"]
use_backtrace = ["vls-core/use_backtrace"]
tracker_size_workaround = ["vls-core/tracker_size_workaround"]
log_pretty_print = []
debug = ["vls-core/debug", "log_pretty_print"]

[dependencies]
vls-core = { path = "../vls-core", version = "0.9.0", default-features = false }
vls-protocol = { path = "../vls-protocol", version = "0.9.0" }
log = { version = "0.4", default_features = false }
serde = { version = "1.0", default_features = false }
bit-vec = { version = "0.6", default_features = false }

[dev-dependencies]
vls-core = { path = "../vls-core", version = "0.9.0", features = ["test_utils"] }
# For logging in unit tests
test-log = "0.2"
env_logger = "0.9"
