[package]
name = "vls-protocol-signer"
license = "Apache-2.0"
version = "0.11.0-rc.3"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[features]
default = ["std"]
no-std = ["vls-protocol/no-std", "vls-core/no-std"]
std = ["vls-protocol/std", "vls-core/std"]
secp-lowmemory = ["vls-core/secp-lowmemory"]
use_backtrace = ["vls-core/use_backtrace"]
tracker_size_workaround = ["vls-core/tracker_size_workaround"]
timeless_workaround = ["vls-core/timeless_workaround"]
log_pretty_print = []
debug_node_state = []
debug = ["vls-core/debug", "log_pretty_print", "debug_node_state"]

[dependencies]
vls-core = { path = "../vls-core", version = "0.11.0-rc.3", default-features = false }
vls-protocol = { path = "../vls-protocol", version = "0.11.0-rc.3", default-features = false }
log = { version = "0.4", default_features = false }
bit-vec = { version = "0.6", default_features = false }

[dev-dependencies]
vls-core = { path = "../vls-core", version = "0.11.0-rc.3", features = ["test_utils"] }
# For logging in unit tests
test-log = "0.2"
env_logger = "0.9"
