[package]
name = "vls-protocol"
license = "Apache-2.0"
version = "0.12.0-rc.2"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[dependencies]
bitcoin-consensus-derive = { version = "0.1.0" }
bolt-derive = { path = "../bolt-derive", version = "0.3.0" }
log = "0.4"
as-any = "0.3"
hex = { version = "0.4", default-features = false }
vls-core = { path = "../vls-core", version = "0.12.0-rc.2", default-features = false }

[dependencies.serde_bolt]
version = "0.3.5"
#git = "https://gitlab.com/lightning-signer/serde-bolt"
#rev = "6d3d873492d19edb09dc2764a3d4c4c23caaa28f"
#path = "../../../serde-bolt"
default-features = false

[dependencies.txoo]
version = "0.7.0"
#git = "https://gitlab.com/lightning-signer/txoo"
#rev = "d49b25283a5f1db675db20a19b313e5ca7456410"
#branch = "main"
#path = "../../txoo"
default-features = false

[dev-dependencies]
regex = "1.5"
# For logging in unit tests
env_logger = "0.9"
test-log = "0.2.8"
serde_bolt = { version = "0.3.5", features = ["test_utils"] }

[features]
default = ["std"]
std = ["serde_bolt/std", "txoo/std", "vls-core/std"]
no-std = ["serde_bolt/no-std", "txoo/no-std", "vls-core/no-std"]
test_utils = ["serde_bolt/test_utils"]

# dangerous, only for testing
log-secrets = []
