[package]
name = "vls-protocol"
license = "Apache-2.0"
version = "0.12.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[dependencies]
bitcoin-consensus-derive = { version = "0.1.0" }
bolt-derive = { path = "../bolt-derive", version = "0.3.1" }
log = "0.4"
as-any = "0.3"
hex = { version = "0.4", default-features = false }
vls-core = { path = "../vls-core", version = "0.12.0", default-features = false }

[dependencies.serde_bolt]
version = "0.4.1"
#git = "https://gitlab.com/lightning-signer/serde-bolt.git"
#rev = "9b1c851981337cdd748cf0fdf3342ea9b51e8cce"
#branch = "pr13"
#path = "../../../serde-bolt"
default-features = false

[dependencies.txoo]
version = "0.8"
#git = "https://gitlab.com/vincenzopalazzo/txoo"
#rev = "94ba28c5cd86a6591b4ebd9832bd45c880624dc9"
#branch = "macros/upgrade-bitcoin"
#path = "../../txoo"
default-features = false

[dev-dependencies]
regex = "1.5"
# For logging in unit tests
env_logger = "0.9"
test-log = "0.2.8"
serde_bolt = { version = "0.4.1", features = ["test_utils"] }

[features]
default = ["std"]
std = ["serde_bolt/std", "txoo/std", "vls-core/std"]
no-std = ["serde_bolt/no-std", "txoo/no-std", "vls-core/no-std"]

# dangerous, only for testing
log-secrets = []
