[package]
name = "vls-protocol"
license = "Apache-2.0"
version = "0.14.0"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"

[dependencies]
bitcoin-consensus-derive = { workspace = true }
bolt-derive = { path = "../bolt-derive", version = "0.4.0" }
log = "0.4"
as-any = "0.3"
hex = { workspace = true }
vls-core = { path = "../vls-core", version = "0.14.0", default-features = false }

[dependencies.serde_bolt]
version = "0.5.0"
default-features = false

[dependencies.txoo]
workspace = true

[dev-dependencies]
regex = "1.5"
# For logging in unit tests
env_logger = { workspace = true }
test-log = { workspace = true }
serde_bolt = { version = "0.5.0", features = ["test_utils"] }
vls-protocol = { path = ".", features = ["developer"] }

[features]
default = ["std"]
std = ["serde_bolt/std", "txoo/std", "vls-core/std"]
no-std = ["serde_bolt/no-std", "txoo/no-std", "vls-core/no-std"]
developer = []

# dangerous, only for testing
log-secrets = []
