[package]
name = "vls-proxy"
license = "Apache-2.0"
version = "0.14.0-rc.1"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"
description = "A library for implementing a Lightning signer, which externalizes and secures cryptographic operations."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
rust-version = "1.74.0"

[features]
default = ["grpc", "main", "debug"]
grpc = ["tokio", "tonic", "async-stream", "url", "backon"]

main = ["clap", "ctrlc"]
log_pretty_print = ["vls-core/log_pretty_print", "vls-frontend/log_pretty_print", "vls-protocol-signer/log_pretty_print"]
debug = ["vls-core/debug", "vls-protocol-signer/debug"]
system-test = ["serde_json", "tempfile", "vls-core/test_utils"]
heapmon_requests = []
developer = ["vls-protocol/developer", "vls-protocol-signer/developer", "vls-protocol-client/developer"]
test_cli = []

[dependencies]
vls-common = { path = "../vls-common", version = "0.14.0-rc.1" }
vls-core = { path = "../vls-core", version = "0.14.0-rc.1", features = ["use_backtrace"] }
vls-protocol-signer = { path = "../vls-protocol-signer", version = "0.14.0-rc.1" }
vls-protocol-client = { path = "../vls-protocol-client", version = "0.14.0-rc.1" }
vls-protocol = { path = "../vls-protocol", version = "0.14.0-rc.1" }
vls-frontend = { path = "../vls-frontend", version = "0.14.0-rc.1" }
vls-persist = { path = "../vls-persist", version = "0.14.0-rc.1", default-features = false, features = ["std", "kvv", "redb-kvv"] }
vls-util = { path = "../vls-util", version = "0.14.0-rc.1", features = ["main"] }
vlsd = { path = "../vlsd", version = "0.14.0-rc.1" }
lightning-storage-server = { path = "../lightning-storage-server/lib", version = "0.5.0", default-features = false }
nix = { version = "0.29", features = ["net", "uio", "term"] }
serde_json = { workspace = true, optional = true, features = ["std"] }
tempfile = { version = "3", optional = true }
log = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
# match kv dep for now
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tonic = { workspace = true, optional = true, features = ["server", "codegen", "channel", "prost"] }
ctrlc = { version = "3.4.5", features = ["termination"], optional = true }
triggered = "0.1"
async-stream = { version = "0.3", optional = true }
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
url = { workspace = true, optional = true }
hex = { workspace = true }
lru = ">=0.11.0,<0.13.0"
txoo-bitcoind-client = { workspace = true }
backon = { version = "1.4.1", optional = true }

[dev-dependencies]
tempfile = "3"
vls-proxy = { path = ".", features = ["developer"] }
vls-core = { path = "../vls-core", version = "0.14.0-rc.1", features = [
  "use_backtrace",
  "test_utils",
] }
assert_cmd = "2.0.16"
predicates = "3.1.3"

[lib]
name = "vls_proxy"
path = "src/lib.rs"

[[bin]]
# A drop-in replacement for hsmd, communicating to an embedded VLS over a serial port
# AKA cln:serial
name = "remote_hsmd_serial"
path = "src/serial_main.rs"
required-features = ["main"]

[[bin]]
# A replacement for hsmd, listening to vlsd over a gRPC protocol
# AKA cln:socket
name = "remote_hsmd_socket"
path = "src/socket_main.rs"
required-features = ["grpc", "main"]


[[bin]]
name = "decode-vls"
path = "src/decode-vls.rs"

[[test]]
name = "frontend_system_test"
path = "tests/frontend_system_test.rs"
required-features = ["system-test"]

[[test]]
name = "cloud_system_test"
path = "tests/cloud_system_test.rs"
required-features = ["system-test"]
