[package]
name = "vls-server"
version = "0.1.0-5"
authors = ["Devrandom <c1.devrandom@niftybox.net>", "Ken Sedgwick <ken@bonsai.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library for implementing a Lightning signer server, dependent on the vls-core crate."
homepage = "https://gitlab.com/lightning-signer/docs/"
repository = "https://gitlab.com/lightning-signer/validating-lightning-signer"
readme = "../README.md"
rust-version = "1.60.0"
build = "build.rs"

[features]
default = ["debug"]
grpc = ["tokio", "tonic", "prost", "serde", "vls-core/grpc"]
persist-kv-json = [ "vls-persist/kv-json" ]
persist = [ "vls-persist" ]
test_utils = ["vls-core/test_utils"]
frontend = ["vls-frontend"]
secp-lowmemory = ["vls-core/secp-lowmemory"]
use_backtrace = ["vls-core/use_backtrace"]
debug = ["log_pretty_print", "vls-core/debug"]
log_pretty_print = []

[lib]
name = "lightning_signer_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
log = { version="0.4.14", features = [ "std" ] }
time = { version = "0.3", features = [ "formatting", "macros" ] }
vls-core = { path = "../vls-core" }
vls-persist = { path = "../vls-persist", optional = true }
vls-frontend = { path = "../vls-frontend", optional = true }
hex = "0.4"
tonic = { version = "0.8", optional = true }
prost = { version = "0.11", optional = true }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"], optional = true }
serde = { version = "1.0.105", features = ["derive"], optional = true }
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.8"
